[Changes for 0.77 - 2007-08-03]
* Add support for prefork.pm (similar to how base.pm is detected).
* Added uses field to hash descriptions returned by scan_deps + tests (Adrian Issott)

[Changes for 0.76 - 2007-07-21]
* Fix special case for Term::ReadLine (should not rope in Tk)
* New special case for Tcl::Tk (should not rope in Tk either!)
* New special case for threads::shared ==> rope in attributes.pm
* Fix to avoid duplicated entries that can arise due to case differences that don't actually matter on case-tolerant systems (Adrian Issott)
* M::SD warnings now go to STDERR not STDOUT (Adrian Issott)
* Fixed bug #24162: scandeps.(bat|pl) doesn't correctly identify Core Modules on Windows (Adrian Issott)
* Now finds shared libraries for modules specified as input files.
* Tests for finding shared libraries.

[Changes for 0.75 - 2007-06-24]
* Fix special cases for POE. (Roderich Schupp)
* Added exported path_to_inc_name subroutine (Adrian Issott)
* Added Module::Build::ModuleInfo dependency (Adrian Issott)
* Fixed bug where input files weren't scoped properly
* Add new "check-for-dynaloader" test. (Eric Wilhelm)

[Changes for 0.74 - 2007-04-26]
* Same as 0.73_01, but not a developer release.

[Changes for 0.73_01 - 2007-03-28]
* Fixed bug "scan_deps doesn't show ALL the dependencies"
* Ensured all file entries are given by absolute paths
* Added a number of test artificial dependency trees as test data mainly for
  "scan_deps doesn't show ALL the dependencies" bug
* Added tests for scandeps recurse option (all pass)
* Added tests for scandeps skip option (all pass)
* Added tests to show a duplicated dependency is in fact only shown once (all pass)
* Added Utils.pm test module containing generic_scandeps_rv_test and
  compare_scandeps_rvs subroutines (Adrian Issott)

[Changes for 0.73 - 2007-03-25]
* Now being a little cleverer for detecting globs in diamond operators.
  (Requiring a meta character within the <>.)

[Changes for 0.72 - 2007-02-03]