@@ -1,0 +1,3 @@
+package example_too;
+
+1;
